# 2022_2_BloodCodeGang

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  hello.cpp  main.cpp
.github/workflows/: cmake.yml
Back/: CMakeLists.txt  back.cpp
Back/include/: SwipeResource.h
Back/src/: SwipeResource.cpp
Back/static/css/: style.css
Back/static/resources/themes/bootstrap/2/: wt.less
BitCounter/: BitCounter.cpp  BitCounter.h
Front/: CMakeLists.txt  front.cpp
Front/approot/: hangman.db
Front/include/: IObservable.h  MatchCancelReporterModel.h  MatchController.h  MatchIconsWidget.h  MatchProfileWidget.h  MatchesListingWidget.h  MenuWidget.h  SwipeUIModel.h  SwipeWidget.h  UserInfo.h
Front/src/: MatchIconsWidget.cpp  MatchListingModel.cpp  MatchProfileWidget.cpp  MatchesListingWidget.cpp  MenuWidget.cpp  RecommendedUsersModel.cpp  SwipeUIModel.cpp  SwipeWidget.cpp  UserEstimationModel.cpp
Front/static/css/: style.css
Front/static/resources/themes/bootstrap/3/: wt.less
Front/style/: CSSexampl.css  CSSexample.css
Front/temp_include/: Action.h  ActionBus.h  MatchListingModel.h  RecommendedUsersModel.h  UserEstimationModel.h
Front/temp_src/: ActionBus.cpp  MatchCancelReporterModel.cpp  MatchController.cpp  MatchListingModel.cpp  RecommendedUsersModel.cpp  UserEstimationModel.cpp
bitCounter/: CMakeLists.txt  bitCounter.cpp  bitCounter.h
bitInversion/: CMakeLists.txt  bitInversion.cpp  bitInversion.h
bit_inversion/: CMakeLists.txt  bit_inversion.cpp  bit_inversion.h
event/: CMakeLists.txt  EventController.h  EventInfo.h  EventManager.h  EventReportModels.h  eventFeeds.h
frontend/actionBus/: actionbus.hpp  iObservable.hpp  subscriber.hpp
frontend/authentification/: authController.hpp  authModel.hpp  authUIModel.hpp  iAuthModel.hpp
frontend/chat/: chatController.hpp  chatHistory.hpp  chatModel.hpp  chatUIModel.hpp  iChatModel.hpp
frontend/registration/: iRegistrationModel.hpp  iRegistrationUIModel.hpp  passwordController.hpp  registration.hpp
frontend/userinfo/: ProfileUIModel.hpp  iProfileModel.hpp  profileController.hpp  profileInfoModel.hpp  userinfo.hpp
linters/: run.sh
memoryError/: CMakeLists.txt  MemoryError.cpp  MemoryError.h  memoryError.cpp  memoryError.h
memtest/: memtest.sh
source/: CMakeLists.txt
tests/: BitCounterTest.cpp  CMakeLists.txt  bitCounterTest.cpp  bitInversionTest.cpp  bit_inversion_test.cpp
