cmake_minimum_required(VERSION 3.0.0)
project(memoryError_lib)

file(GLOB SOURCES "*.cpp")
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

message("SOURCES = ${SOURCES}")

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(MEMORYERROR_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(MEMORYERROR_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)