cmake_minimum_required(VERSION 3.0.0)
project(source)

SET(WT_PROJECT_SOURCE
        hello.cpp
        )

FIND_PACKAGE(Wt REQUIRED)
INCLUDE_DIRECTORIES(${Wt_INCLUDE_DIR})

SET(WT_PROJECT_TARGET hello.wt)

ADD_EXECUTABLE(${WT_PROJECT_TARGET} ${WT_PROJECT_SOURCE})

TARGET_LINK_LIBRARIES(${WT_PROJECT_TARGET} ${WT_CONNECTOR}  ${Wt_DEBUG_LIBRARY}            # wtd           or wt
        ${Wt_HTTP_DEBUG_LIBRARY} )

INCLUDE_DIRECTORIES(/usr/local/include/Wt)